tests/snapshots/examples_fixtures/guide_async__01_first_async.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_async/01_first_async.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
