tests/snapshots/examples_fixtures/guide_async__02_sleep_and_yield.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_async/02_sleep_and_yield.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
