tests/snapshots/examples_fixtures/guide_async__03_sequential_vs_concurrent.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_async/03_sequential_vs_concurrent.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
