tests/snapshots/examples_fixtures/guide_async__04_both_concurrent_pair.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_async/04_both_concurrent_pair.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
