tests/snapshots/examples_fixtures/guide_async__06_first_of_mirrors.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_async/06_first_of_mirrors.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
