tests/snapshots/examples_fixtures/guide_async__07_timeout_deadline.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_async/07_timeout_deadline.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
