tests/snapshots/examples_fixtures/guide_async__08_try_catch_failure.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_async/08_try_catch_failure.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
