tests/snapshots/examples_fixtures/guide_async__09_scope_fork_workers.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_async/09_scope_fork_workers.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
