tests/snapshots/examples_fixtures/guide_async__10_channel_producer_consumer.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_async/10_channel_producer_consumer.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
