tests/snapshots/examples_fixtures/guide_async__12_real_world_fanout.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_async/12_real_world_fanout.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
